monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4010/A4010.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4010;

grammar A4010 extends de.monticore.common.TestTypes  {
  abstract ArrayType;

}
